feat: Merge main branch features (#594)
* fix(deps): update dependency me.ahoo.cosid:cosid-test to v2.1.2 (#361)

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>

* feat: Support `GroupedIdSegmentDistributor`. (#362)

* fix(deps): update dependency org.axonframework:axon-bom to v4.8.0 (#364)

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>

* feat: Support auto config `GroupedIdSegmentDistributor` . (#363)

* fix(deps): update dependency me.ahoo.cosid:cosid-jdbc to v2.2.0 (#365)

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>

* fix(deps): update dependency me.ahoo.cosid:cosid-test to v2.2.0 (#366)

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>

* feat: Support `GroupedAccessor` . (#367)

* fix(deps): update dependency me.ahoo.cosid:cosid-jdbc to v2.2.1 (#368)

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>

* fix(deps): update dependency me.ahoo.cosid:cosid-test to v2.2.1 (#369)

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>

* chore(deps): update dependency gradle to v8.2 (#370)

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>

* refactor: dependency management (#372)

* fix(deps): update dependency org.junit-pioneer:junit-pioneer to v2 (#373)

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>

* update dependency gradle to v8.2.1 (#374)

* Update version

* dep: update cosid-proxy version to v2.2.1 (#375)

dep: update cosky-proxy version to v2.2.1

* fix(deps): update dependency me.ahoo.cosid:cosid-test to v2.2.2 (#377)

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>

* fix(deps): update dependency me.ahoo.cosid:cosid-jdbc to v2.2.2 (#376)

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>

